@@ -39,6 +39,7 @@ monitors might work too, but I can't test them, user feedback is welcome):
   - Polar F6           (tested)
   - Polar F11          (tested)
   - Polar CS600        (tested, HRM files only)
+  - Polar RX3          (tested, HRM files only)
   - CicloSport HAC4    (tested)
   - CicloSport HAC4Pro (tested)
   - CicloSport HAC5    (tested)
@@ -472,4 +473,4 @@ based on the IcoMoon icons.
 
 
 Stefan Saring
-2015/08/15
+2015/10/07
