@@ -13,6 +13,8 @@ v7.1.1:
       not increases the start time and memory usage SportsTracker (tested)
   - Exercise Dialog: preselection of sport type and subtype when adding new
     exercises, if there is only one choice
+ ExerciseViewer changes:
+  - added support for Polar RX3 HRM files (contains limited data only)
 
 v7.1.0:
  SportsTracker changes:
